--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
             <div class="cell-character-container">
                 <img src="./assets/character/main.png" alt="쿨쿨 세포" class="cell-character" id="sleepyCharacter">
             </div>
-            <div id="sleepyOverlay" class="sleepy-overlay"></div>
         </div>
     </section>
 
@@ -207,11 +206,19 @@
                 <img src="./assets/character/main.png" alt="패션 세포" class="cell-character" id="fashionCharacter">
             </div>
             <!-- 드래그 가능한 이미지들 (섹션 레벨에 배치) -->
-            <img src="./assets/character/main.png" alt="테스트 이미지 1" class="fashion-draggable" style="position: absolute; left: 100px; top: 100px; width: 150px; height: 150px; object-fit: contain; cursor: move; z-index: 10;">
-            <img src="./assets/character/main.png" alt="테스트 이미지 2" class="fashion-draggable" style="position: absolute; left: 300px; top: 150px; width: 120px; height: 120px; object-fit: contain; cursor: move; z-index: 10;">
-            <img src="./assets/character/main.png" alt="테스트 이미지 3" class="fashion-draggable" style="position: absolute; left: 500px; top: 200px; width: 180px; height: 180px; object-fit: contain; cursor: move; z-index: 10;">
+            <img src="./assets/character/cap.png" alt="테스트 이미지 1" class="fashion-draggable" style="position: absolute; left: 100px; top: 100px; width: 80vh; height: 80vh; max-width: 100%; max-height: 100%; object-fit: contain; cursor: move; z-index: 10;">
+            <img src="./assets/character/glass.png" alt="테스트 이미지 2" class="fashion-draggable" style="position: absolute; left: 300px; top: 150px; width: 80vh; height: 80vh; max-width: 100%; max-height: 100%; object-fit: contain; cursor: move; z-index: 10;">
+            <img src="./assets/character/clothes.png" alt="테스트 이미지 3" class="fashion-draggable" style="position: absolute; left: 500px; top: 200px; width: 80vh; height: 80vh; max-width: 100%; max-height: 100%; object-fit: contain; cursor: move; z-index: 10;">
+            <img src="./assets/character/pants.png" alt="테스트 이미지 4" class="fashion-draggable" style="position: absolute; left: 700px; top: 100px; width: 80vh; height: 80vh; max-width: 100%; max-height: 100%; object-fit: contain; cursor: move; z-index: 10;">
         </div>
     </section>
+
+    <!-- 푸터 -->
+    <footer class="footer">
+        <div class="footer-content">
+            <p class="footer-text">© 2025 CELF. All rights reserved.</p>
+        </div>
+    </footer>
 
     <!-- 오디오 파일 (숨김) -->
     <audio id="audioSource" loop preload="auto" crossorigin="anonymous">
